--- a/index.html
+++ b/index.html
@@ -1,81 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Flowlune Games</title>
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" 
-          href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-
-    <!-- Optional: simple font -->
-    <link rel="stylesheet" 
-          href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
-
-    <style>
-        body {
-            font-family: 'Montserrat', sans-serif;
-            background-color: #0b0e19;
-            color: #ffffff;
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            padding: 40px;
-            text-align: center;
-        }
-
-        h1 {
-            font-size: 3rem;
-            margin-bottom: 20px;
-            letter-spacing: 2px;
-        }
-
-        .social-buttons a {
-            margin: 10px;
-            padding: 12px 24px;
-            border-radius: 12px;
-            text-decoration: none;
-            font-weight: 600;
-            display: inline-block;
-        }
-
-        .btn-outline {
-            border: 2px solid #ffffff;
-            color: #ffffff;
-            transition: 0.3s;
-        }
-
-        .btn-outline:hover {
-            background-color: #ffffff;
-            color: #0b0e19;
-        }
-
-        .footer {
-            margin-top: 40px;
-            opacity: 0.5;
-            font-size: 0.9rem;
-        }
-    </style>
+    <!-- Main stylesheet -->
+    <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
 <body>
 
-    <h1>Flowlune Games</h1>
-    <p>Indie rhythm & arcade experiences, powered by passion.</p>
+    <!-- ===== Header / Navigation ===== -->
+    <header class="site-header">
+        <nav class="nav">
+            <div class="nav-brand">
+                <a href="/">Flowlune Games</a>
+            </div>
 
-    <div class="social-buttons">
-        <a href="https://gamejolt.com/@FlowluneGames" class="btn-outline">GameJolt</a>
-        <a href="https://flowlunegames.itch.io/" class="btn-outline">Itch.io</a>
-        <a href="https://www.instagram.com/flowlunegames" class="btn-outline">Instagram</a>
-        <a href="https://www.tiktok.com/@flowlunegames" class="btn-outline">TikTok</a>
-        <a href="https://www.youtube.com/@flowlunegames" class="btn-outline">YouTube</a>
-    </div>
+            <ul class="nav-links">
+                <li><a href="/">Home</a></li>
+                <li><a href="games/rhythm-angel.html">Games</a></li>
+                <li><a href="about/">About</a></li>
+                <li><a href="contact/">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <div class="footer">© 2025 Flowlune Games</div>
+    <!-- ===== Hero Section ===== -->
+    <main>
+        <section class="hero">
+            <div class="hero-content">
+                <h1>Flowlune Games</h1>
+                <p class="tagline">
+                    An indie studio creating calm, expressive rhythm games.
+                </p>
+            </div>
+        </section>
+
+        <section class="aria-intro">
+            <img src="assets/images/aria/chibi.png" alt="Aria" class="aria-chibi" />
+            <p class="aria-line">
+                Welcome. Take your time.
+            </p>
+        </section>
+
+
+        <!-- ===== Current Project ===== -->
+        <section class="current-project">
+            <h2>Currently in development</h2>
+
+            <div class="project-card">
+                <h3>Rhythm Angel</h3>
+                <p>
+                    A keyboard-based rhythm game focused on flow, clarity,
+                    and musical expression.
+                </p>
+
+                <a class="button" href="games/rhythm-angel.html">
+                    Learn more
+                </a>
+            </div>
+        </section>
+    </main>
+
+    <!-- ===== Footer ===== -->
+    <footer class="site-footer">
+        <p>
+            © Flowlune Games
+        </p>
+
+    </footer>
 
 </body>
+
 </html>
