--- a/games/rhythm-angel.html
+++ b/games/rhythm-angel.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&display=swap" rel="stylesheet">
+
+
     <title>Rhythm Angel - Flowlune Games</title>
     <link rel="stylesheet" href="../assets/css/style.css" />
 </head>
